<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textSize="30sp"
    android:fontFamily="sans-serif-black"
    android:layout_margin="10dp"
    android:id="@+id/tvName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterYourName"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tvEnterName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterHere"
        android:textSize="25sp"
        android:id="@+id/etEnterHere"
        android:inputType="text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="26sp"
        android:layout_gravity="right"
        android:id="@+id/btnCancel"
        android:layout_marginRight="10dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:textSize="26sp"
        android:layout_gravity="right"
        android:id="@+id/btnSet"/>
    </LinearLayout>
</LinearLayout>